[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightstreamer-client-lib"
version = "::version::"
description = "Lightstreamer Client SDK"
readme = "README.md"
authors = [{ name = "Lightstreamer Srl", email = "support@lightstreamer.com" }]
license = { text = "Apache-2.0" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries"
]
keywords = ["lightstreamer", "push", "realtime", "real-time"]
dependencies = [
    "aiohttp >= 3.8.1"
]
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/Lightstreamer/Lightstreamer-lib-client-haxe"
